--- a/index.html
+++ b/index.html
@@ -4113,55 +4113,56 @@
     <!-- MENU MOBILE -->
     <div class="menu-mobile fixed inset-0 z-[5]">
         <div class="overlay-menu-mobile"></div>
-        <div class="lg:hidden fixed top-0 left-0 bottom-0 w-[300px] max-w-[500px] bg-gray-100 font-medium px-3 z-[-1]">
-            <div class="text-center py-3 border-b border-gray-400">Menu</div>
-            <ul class="">
-                <li class="menu-item-mobile border-b flex justify-between items-center">
-                    <span class="">
-                        Danh mục sản phẩm
-                    </span>
-                    <button
-                        class="next-menu-icon border-l h-[3rem] flex justify-between items-center px-3 cursor-pointer">
-                        <i class=" fa-solid fa-chevron-right"></i>
-                    </button>
-                    <div
-                        class="menu-child lg:hidden fixed top-0 left-0 bottom-0 w-[300px] max-w-[500px] bg-gray-100 font-medium px-3 invisible">
-                        <div class=" text-center py-3 border-b border-gray-400 flex items-center">
-                            <button> <i class="icon-prev fa-solid fa-chevron-left"></i></button>
-                            <span class="flex-1">Sản phẩm bán chạy</span>
+        <div class="overflow-hidden lg:hidden fixed top-0 left-0 bottom-0 w-[300px] max-w-[500px]">
+            <div class="menu-parent bg-gray-100 absolute inset-0 font-medium px-3 h-full">
+                <div class="text-center py-3 border-b border-gray-400">Menu</div>
+                <ul class="">
+                    <li class="menu-item-mobile border-b flex justify-between items-center">
+                        <span class="">
+                            Danh mục sản phẩm
+                        </span>
+                        <button
+                            class="next-menu-icon border-l h-[3rem] flex justify-between items-center px-3 cursor-pointer">
+                            <i class=" fa-solid fa-chevron-right"></i>
+                        </button>
+                        <div class="menu-child bg-gray-100 font-medium px-3 absolute inset-0" style="z-index: -1;">
+                            <div class=" text-center py-3 border-b border-gray-400 flex items-center">
+                                <button> <i class="icon-prev fa-solid fa-chevron-left"></i></button>
+                                <span class="flex-1">Sản phẩm bán chạy</span>
+                            </div>
+                            <ul class="">
+                                <li class="border-b flex justify-between items-center">
+                                    <span class="min-h-[3rem] leading-[3rem]">
+                                        Danh mục sản phẩm
+                                    </span>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="">
-                            <li class="border-b flex justify-between items-center">
-                                <span class="min-h-[3rem] leading-[3rem]">
-                                    Danh mục sản phẩm
-                                </span>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="menu-item-mobile border-b flex justify-between items-center">
-                    <span class="">
-                        Danh mục sản phẩm
-                    </span>
-                    <button class="next-menu-icon border-l h-[3rem] flex justify-between items-center px-3">
-                        <i class=" fa-solid fa-chevron-right"></i>
-                    </button>
-                    <div
-                        class="menu-child lg:hidden fixed top-0 left-0 bottom-0 w-[300px] max-w-[500px] bg-gray-100 font-medium px-3 invisible">
-                        <div class=" text-center py-3 border-b border-gray-400 flex items-center">
-                            <i class="icon-prev fa-solid fa-chevron-left"></i>
-                            <span class="flex-1">Sản phẩm bán chạy</span>
+                    </li>
+                    <li class="menu-item-mobile border-b flex justify-between items-center">
+                        <span class="">
+                            Danh mục sản phẩm
+                        </span>
+                        <button
+                            class="next-menu-icon border-l h-[3rem] flex justify-between items-center px-3 cursor-pointer">
+                            <i class=" fa-solid fa-chevron-right"></i>
+                        </button>
+                        <div class="menu-child bg-gray-100 font-medium px-3 absolute inset-0" style="z-index: -1;">
+                            <div class=" text-center py-3 border-b border-gray-400 flex items-center">
+                                <button> <i class="icon-prev fa-solid fa-chevron-left"></i></button>
+                                <span class="flex-1">Sản phẩm bán chạy</span>
+                            </div>
+                            <ul class="">
+                                <li class="border-b flex justify-between items-center">
+                                    <span class="min-h-[3rem] leading-[3rem]">
+                                        Danh mục sản phẩm
+                                    </span>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="">
-                            <li class="border-b flex justify-between items-center">
-                                <span class="min-h-[3rem] leading-[3rem]">
-                                    Danh mục sản phẩm
-                                </span>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <!-- END MENU MOBILE -->
