--- a/index.html
+++ b/index.html
@@ -3727,7 +3727,7 @@
                     <h3 class="uppercase font-bold text-lg lg:text-xl max-w-[500px]">
                         Đăng ký nhận email thông báo khuyến mại hoặc để được tư vấn miễn phí
                     </h3>
-                    <div class="flex rounded-3xl overflow-hidden max-w-[600px] mt-4">
+                    <div class="flex rounded-[40px] overflow-hidden max-w-[600px] mt-4">
                         <input type="text" placeholder="Nhập email hoặc số điện thoại của bạn"
                             class="p-3 outline-none flex-1">
                         <button class="uppercase px-4 lg:!px-[3.5rem] text-white font-medium"
